chagedswaggerAuthUsers
